force-app/main/default/objects/Account_Purchase_Pattern__c/Account_Purchase_Pattern__c.object-meta.xml
<CustomObject>
    <label>Padrão de Compra da Conta</label>
    <pluralLabel>Padrões de Compra das Contas</pluralLabel>
    <nameField>
        <label>Nome do Padrão</label>
        <type>AutoNumber</type>
        <displayFormat>APP-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Snapshot calculado do padrão de recompra de uma conta (Rebuy Radar). Owner = dono da conta, garantindo visibilidade por carteira.</description>
</CustomObject>