force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Conta</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Padrões de Compra</relationshipLabel>
    <relationshipName>PurchasePatterns</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>