force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <label>Chave da Conta</label>
    <type>Text</type>
    <length>18</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Id da conta como chave externa para upsert idempotente do batch.</description>
</CustomField>