force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Average_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Interval_Days__c</fullName>
    <label>Cadência Média (dias)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
</CustomField>