force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Average_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value__c</fullName>
    <label>Ticket Médio</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>