force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <label>Dias em Atraso</label>
    <type>Number</type>
    <formula>IF(ISBLANK(Expected_Next_Purchase_Date__c), 0, MAX(0, TODAY() - Expected_Next_Purchase_Date__c))</formula>
    <precision>6</precision>
    <scale>0</scale>
    <description>Fórmula: se mantém atualizada todo dia, mesmo entre execuções do batch.</description>
</CustomField>