force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Expected_Next_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Next_Purchase_Date__c</fullName>
    <label>Próxima Compra Esperada</label>
    <type>Date</type>
</CustomField>