force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <label>Última Compra</label>
    <type>Date</type>
</CustomField>