force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Purchases_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Purchases_Analyzed__c</fullName>
    <label>Compras Analisadas</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>