force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Nível de Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Em_dia</fullName><label>Em dia</label><default>false</default></value>
            <value><fullName>Atencao</fullName><label>Atenção</label><default>false</default></value>
            <value><fullName>Risco</fullName><label>Risco</label><default>false</default></value>
            <value><fullName>Critico</fullName><label>Crítico</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>