force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Score de Risco</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>0-100: percentual do caminho até o limiar crítico (explicável, não caixa-preta).</description>
</CustomField>