force-app/main/default/objects/Account_Purchase_Pattern__c/fields/Value_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Value_At_Risk__c</fullName>
    <label>Valor em Risco</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Ticket médio × ciclos de compra perdidos.</description>
</CustomField>